--- a/web/post.html
+++ b/web/post.html
@@ -171,14 +171,14 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-md-4">
-                        <h3>About Us</h3>
-                        <p class="mb-4">
-                            <img src="images/img_1.jpg" alt="Image placeholder" class="img-fluid">
-                        </p>
-
-                        <p>Lorem ipsum dolor sit amet sa ksal sk sa, consectetur adipisicing elit. Ipsa harum inventore
-                            reiciendis. <a href="#">Read More</a></p>
-                    </div>
+                        <h3>About Me</h3>
+                    <p class="mb-4">
+                        <img src="images/me.jpg" alt="Image placeholder" class="img-fluid">
+                    </p>
+                    <p>I'm Andriiovych Oleksii. I'm from the group Lv-393.Java</p>
+                    <p>This is my own blog. It was my the second task in SoftServe IT Academy.
+                        This project have written with Java. If You want see source,  <a href="https://github.com/narnanam/blog">follow this link</a></p>
+                </div>
                     <div class="col-md-6 ml-auto">
                         <div class="row">
                             <div class="col-md-7">
@@ -190,17 +190,6 @@
                             <div class="col-md-1"></div>
 
                             <div class="col-md-4">
-
-                                <div class="mb-5">
-                                    <h3>Quick Links</h3>
-                                    <ul class="list-unstyled">
-                                        <li><a href="#">About Us</a></li>
-                                        <li><a href="#">Travel</a></li>
-                                        <li><a href="#">Adventure</a></li>
-                                        <li><a href="#">Courses</a></li>
-                                        <li><a href="#">Categories</a></li>
-                                    </ul>
-                                </div>
 
                                 <div class="mb-5">
                                     <h3>Social</h3>
